make change website

--- a/view/cart.ejs
+++ b/view/cart.ejs
@@ -205,5 +205,5 @@
         </div>
     </div>
 </div>
-<script type="text/javaScript" src="/javaScript/cart.js"></script>
+<script type="text/javaScript" src="/JavaScript/cart.js"></script>
 <%- include ('partials/footer') %>-
