--- a/view/payment.ejs
+++ b/view/payment.ejs
@@ -50,5 +50,5 @@
     </div>
 </form>
 </div>
-<script type="text/javaScript" src="/javaScript/payment.js"></script>
+<script type="text/javaScript" src="/JavaScript/payment.js"></script>
 <%- include ('partials/footer') %>-
