--- a/view/cart.ejs
+++ b/view/cart.ejs
@@ -54,7 +54,7 @@
         height: 4px; 
         background: rgb(235, 8, 8); 
         border: 5px;
-        margin-right:60em;
+        margin-right:50em;
         margin-top: 0;
     }   
     hr.style-seven {
@@ -186,7 +186,7 @@
                         </div>
                         <div class="col-sm-6">
                             
-                            Rs <input type="text" id="total_amount" disabled style="background-color: white;">
+                            <caption>Rs</caption><input type="text" id="total_amount" disabled style="background-color: white;">
                         </div>
                     </div>
                 </div>
