--- a/view/homeProduct.ejs
+++ b/view/homeProduct.ejs
@@ -59,42 +59,41 @@
   
  
 
-<div class="container-fluid" style="background-color:#222f36;border-radius: 2em;" id="latestnews1">
-  <h1 style="font-weight: 700;text-align: center;color:#fff;padding-top: 30px;">Latest News</h1>
-  <p style="text-align: center;color:white;margin-bottom:35px;margin-top:20px">If you are interested in the latest articles in the industry, take a sneak peek at our blog. You have nothing to loose!</p>
+  <div class="container-fluid" style="background-color:#222f36" id="latestnews1">
+    <h1 style="font-weight: 700;text-align: center;color:#fff;padding-top: 30px;">Latest News</h1>
+    <p style="text-align: center;color:white;margin-bottom:35px;margin-top:20px">If you are interested in the latest articles in the industry, take a sneak peek at our blog. You have nothing to loose!</p>
+     
+    <div class="row">
+        <div class="col-sm-12" >
+                <div class="card" style="width: 18rem;float:left;margin:60px">
+                        <img src="https://images.unsplash.com/photo-1512552288940-3a300922a275?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="..." >
+                        <div class="card-body">
+                        <h5 class="card-title">We Have Made Iidly Theme SEO Freiendly</h5>
+                        <p class="card-text">Illdy One Page WordPress theme is fully SEO friendly and is ready to help you to achieve the highest rankings…</p>
+                        <a href="#" class="btn btn-outline-warning"><i class="fa fa-chevron-circle-right"></i>Read More</a>
+                        </div>
+                   </div>
+                   <div class="card" style="width: 18rem;float:left;margin:60px">
+                        <img src="https://cdn.houseofcoco.net/uploads/2019/10/ben-o-bro-ZbWSt_Hz0-I-unsplash.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Stunning One Page Wordpress Theme For Masses</h5>
+                        <p class="card-text">This theme is not just free, it is free for private and commercial use since it is licensed under GPL…</p>
+                        <a href="#" class="btn btn-outline-warning stretched-link"><i class="fa fa-chevron-circle-right"></i>Read More</a>
+                        </div>
+                   </div>
+                   <div class="card" style="width: 18rem;float:left;margin:60px">
+                        <img src="https://www.wendyperrin.com/wp-content/uploads/2018/01/venice-2647436_1920.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Hello World</h5>
+                        <p class="card-text">Welcome to colorlib.com. This is our first post around Illdy WordPress theme. Now show that you can make out of it.…</p>
+                        <a href="#" class="btn btn-outline-warning stretched-link"><i class="fa fa-chevron-circle-right"></i>Read More</a>
+                        </div>
+                   </div>  
+        </div>
+       
+    </div>
    
-  <div class="row">
-      <div class="col-sm-12" >
-              <div class="card" style="width: 18rem;float:left;margin:50px;margin-left: 10em;">
-                      <img src="https://images.unsplash.com/photo-1512552288940-3a300922a275?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="..." >
-                      <div class="card-body">
-                      <h5 class="card-title">We Have Made Iidly Theme SEO Freiendly</h5>
-                      <p class="card-text">Illdy One Page WordPress theme is fully SEO friendly and is ready to help you to achieve the highest rankings…</p>
-                      <a href="#" class="btn btn-outline-warning"><i class="fa fa-chevron-circle-right"></i>Read More</a>
-                      </div>
-                 </div>
-                 <div class="card" style="width: 18rem;float:left;margin:50px">
-                      <img src="https://cdn.houseofcoco.net/uploads/2019/10/ben-o-bro-ZbWSt_Hz0-I-unsplash.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                      <h5 class="card-title">Stunning One Page Wordpress Theme For Masses</h5>
-                      <p class="card-text">This theme is not just free, it is free for private and commercial use since it is licensed under GPL…</p>
-                      <a href="#" class="btn btn-outline-warning stretched-link"><i class="fa fa-chevron-circle-right"></i>Read More</a>
-                      </div>
-                 </div>
-                 <div class="card" style="width: 18rem;float:left;margin:50px">
-                      <img src="https://www.wendyperrin.com/wp-content/uploads/2018/01/venice-2647436_1920.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                      <h5 class="card-title">Hello World</h5>
-                      <p class="card-text">Welcome to colorlib.com. This is our first post around Illdy WordPress theme. Now show that you can make out of it.…</p>
-                      <a href="#" class="btn btn-outline-warning stretched-link"><i class="fa fa-chevron-circle-right"></i>Read More</a>
-                     
-                      </div><div id="contact1"></div>
-                 </div>  
-      </div>
-      
-  </div>
-  
-</div>
+ </div>
 
 <div class="container-fluid" style="background: rgb(228, 236, 188);border-radius: 2em;margin-top: 10px; " >
   <h1 style="text-align: center;padding-top:2%;font-weight: 600;margin-bottom: 5%;color:rgb(34, 32, 32)">Contact Us</h1>
