--- a/view/cart.ejs
+++ b/view/cart.ejs
@@ -186,7 +186,7 @@
                         </div>
                         <div class="col-sm-6">
                             
-                            <caption>Rs</caption><input type="text" id="total_amount" disabled style="background-color: white;">
+                            <span>Rs</span><input type="text" id="total_amount" disabled style="background-color: white;">
                         </div>
                     </div>
                 </div>
