--- a/view/homeProduct.ejs
+++ b/view/homeProduct.ejs
@@ -59,7 +59,7 @@
   
  
 
-  <div class="container-fluid" style="background-color:#222f36" id="latestnews1">
+  <div class="container-fluid" style="background-color:#222f36 ;border-radius: 1em;" id="latestnews1">
     <h1 style="font-weight: 700;text-align: center;color:#fff;padding-top: 30px;">Latest News</h1>
     <p style="text-align: center;color:white;margin-bottom:35px;margin-top:20px">If you are interested in the latest articles in the industry, take a sneak peek at our blog. You have nothing to loose!</p>
      
