--- a/view/cart.ejs
+++ b/view/cart.ejs
@@ -185,8 +185,15 @@
                             <caption>Total Price:</caption>
                         </div>
                         <div class="col-sm-6">
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    <span>Rs</span>
+                                </div>
+                                <div class="col-sm-10">
+                                    <input type="text" id="total_amount" disabled style="background-color: white;">
+                                </div>
+                            </div>
                             
-                            <span>Rs</span><input type="text" id="total_amount" disabled style="background-color: white;">
                         </div>
                     </div>
                 </div>
