--- a/view/homeProduct.ejs
+++ b/view/homeProduct.ejs
@@ -18,6 +18,7 @@
       width: 500px;
     }
 </style>
+
 <div class="container-fluid">
     
 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel" style="margin-top:3em;margin-bottom: 1em;">
@@ -47,7 +48,7 @@
   </div>
   
 
-    
+  
   <div class="row">
     <% product1.forEach(function(product){ %>   
     <div class="col-sm-4 image2">
@@ -57,7 +58,7 @@
     
   </div>
   
- 
+  <!-- <h1><%= message.success %></h1> -->
 
   <div class="container-fluid" style="background-color:#222f36 ;border-radius: 1em;" id="latestnews1">
     <h1 style="font-weight: 700;text-align: center;color:#fff;padding-top: 30px;">Latest News</h1>
