--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -7,7 +7,7 @@
     <title>Fasion Shopping</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     
     <script src="https://use.fontawesome.com/e6be423b18.js"></script>
@@ -19,7 +19,7 @@
         scroll-behavior: smooth;
       }
       body{
-        font-family:'Playfair Display', serif;
+        font-family:'Noto Serif', serif;
       }
         .space{
             margin-right: 4px;
