--- a/view/payment.ejs
+++ b/view/payment.ejs
@@ -43,7 +43,7 @@
   <!-- Subscribe section -->
   <form action="/subscribe" method="POST">
     <div class="w3-container w3-black w3-padding-32" >
-        <h1>Subscribe</h1>
+        <h1 style="margin-left:0;">Subscribe</h1>
         <p>To get special offers and VIP treatment:</p>
         <p><input class="w3-input w3-border" type="text" name="subcribe1" placeholder="Enter e-mail" style="width:100%"></p>
         <button type="submit" class="w3-button w3-red w3-margin-bottom">Subscribe</button>
