--- a/view/homeProduct.ejs
+++ b/view/homeProduct.ejs
@@ -95,7 +95,7 @@
     </div>
    
  </div>
-
+<div id="contact1"></div>
 <div class="container-fluid" style="background: rgb(228, 236, 188);border-radius: 2em;margin-top: 10px; " >
   <h1 style="text-align: center;padding-top:2%;font-weight: 600;margin-bottom: 5%;color:rgb(34, 32, 32)">Contact Us</h1>
   <div class="row">
