--- a/view/homeProduct.ejs
+++ b/view/homeProduct.ejs
@@ -89,13 +89,13 @@
                         <p class="card-text">Welcome to colorlib.com. This is our first post around Illdy WordPress theme. Now show that you can make out of it.…</p>
                         <a href="#" class="btn btn-outline-warning stretched-link"><i class="fa fa-chevron-circle-right"></i>Read More</a>
                         </div>
-                   </div>  
+                   </div>  <div id="contact1"></div>
         </div>
        
     </div>
    
  </div>
-<div id="contact1"></div>
+
 <div class="container-fluid" style="background: rgb(228, 236, 188);border-radius: 2em;margin-top: 10px; " >
   <h1 style="text-align: center;padding-top:2%;font-weight: 600;margin-bottom: 5%;color:rgb(34, 32, 32)">Contact Us</h1>
   <div class="row">
